Updated search to use bulk load